# parsing_2gis

./: .gitignore  README.md  command_line.py  exceptions.py  gui.py  gui.ui  main.py  parser.py  pyproject.toml  save_form.ui  settings.py  threads.py  typings.py
compilation/: compilation.py  start_wrapper.py
